--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -12,7 +12,7 @@
                     <input type="file" name="" id="" class="form-control">
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
-                    <label for="" class="form-label">Product Details</label>
+                    <label for="" class="form-label">Product Description</label>
                     <input type="text" name="" id="" class="form-control">
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
@@ -24,7 +24,7 @@
                     <input type="text" name="" id="" class="form-control">
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
-                    <label for="" class="form-label">Rate</label>
+                    <label for="" class="form-label">Rating</label>
                     <input type="text" name="" id="" class="form-control">
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
